# raven

./: .gitattributes  CLAUDE.md  Cargo.toml  base_color.ktx2  readme.md
crates/raven_brain/: Cargo.toml  readme.md
crates/raven_brain/examples/: brain_1.rs
crates/raven_brain/src/: lib.rs
crates/raven_bvh/: Cargo.toml  readme.md
crates/raven_bvh/benches/: common.rs  random_scene.rs
crates/raven_bvh/examples/: bvh.rs  clock_tower.rs  sponza.rs  tlas.rs
crates/raven_bvh/examples/helpers/: mod.rs
crates/raven_bvh/src/: blas.rs  camera.rs  debug.rs  helpers.rs  lib.rs  tlas.rs  util.rs
crates/raven_bvh/tmp/: aabb3d  aabb_intersection  base  bench  bevy  bevy-now  camera  complete  filter  find_best_match  fix-post  hit_filter  now  now2  now3  ray  tlas_component  vec3a  vert_expand
crates/raven_editor/: Cargo.toml  readme.md
crates/raven_editor/examples/: avian.rs  simple.rs
crates/raven_editor/src/: fps.rs  lib.rs  prefab.rs  select.rs  stepping.rs
crates/raven_nav/: Cargo.toml  readme.md
crates/raven_nav/benches/: common.rs
crates/raven_nav/examples/: agent.rs  cubes.rs  heightfield.rs  multi.rs  simple.rs
crates/raven_nav/examples/common/: mod.rs
crates/raven_nav/src/: agent.rs  character.rs  collider.rs  debug_draw.rs  lib.rs  nav.rs  path.rs  utils.rs
crates/raven_nav/src/tile/: mod.rs
crates/raven_nav/tmp/: base  control  far.txt  hf-prune  raven.txt  varable
crates/raven_splat/: Cargo.toml  readme.md
crates/raven_splat/assets/array_textures/: base_color.ktx2  depth_map.ktx2  metal_rough.ktx2
crates/raven_splat/assets/shaders/: splat_frag.wgsl  splat_vert.wgsl  triplanar_material_frag.wgsl
crates/raven_splat/examples/: splat.rs
crates/raven_splat/src/: lib.rs  triplanar_material.rs
crates/raven_splat/src/shaders/: biplanar.wgsl  pbr_fragment.wesl  triplanar.wgsl
crates/raven_terrain/: Cargo.toml  readme.md
crates/raven_terrain/assets/array_material/: albedo.basis  ao.basis  metal_rough.basis  normal.basis
crates/raven_terrain/assets/shaders/: array_texture.wgsl
crates/raven_terrain/assets/textures/: normal.ktx2  occlusion.ktx2  readme.md
crates/raven_terrain/examples/: array-texture.rs  basic.rs
crates/raven_terrain/src/: debug.rs  lib.rs  quadtree.rs  triplaner.rs  water.rs
crates/raven_util/: Cargo.toml  readme.md
crates/raven_util/src/: camera_free.rs  despawn.rs  fade.rs  gizmos.rs  lib.rs  linspace.rs
crates/raven_util/src/bars/: bar.wgsl  config.rs  material.rs  mod.rs
crates/raven_util/src/theme/: interaction.rs  mod.rs  palette.rs  widget.rs
docs/: ktx.md  lfs.md  tools.md
docs/apps/: audio.md  ydotoo.md
examples/: lib.rs
games/lab/: Cargo.toml
games/lab/assets/shaders/: foo_material.wgsl
games/lab/examples/: pbr.rs
games/lab/src/: foo_material.rs  main.rs  material_tester.rs
games/minesweeper/: Cargo.toml
games/minesweeper/src/: game.rs  loading.rs  main.rs  menu.rs  splash.rs
games/minesweeper/src/ui/: cell.rs  fade.rs  menu.rs  mod.rs
games/rts/: Cargo.toml
games/rts/assets/shaders/: post_processing.wgsl
games/rts/src/: dev.rs  lib.rs  main.rs  stats.rs  team.rs
games/rts/src/ai/: attack.rs  dead.rs  health.rs  mod.rs  movement.rs
games/rts/src/buildings/: base.rs  mod.rs  smelter.rs  spawner.rs  tower.rs
games/rts/src/prop/: mod.rs  mushroom.rs  ore.rs  projectile.rs
games/rts/src/resources/: minimap.rs  mod.rs  selected.rs
games/rts/src/shader/: dead.rs  mod.rs
games/rts/src/states/: in_game_over.rs  in_paused.rs  in_scoreboard.rs  menu.rs  mod.rs
games/rts/src/states/in_game/: minimap.rs  mod.rs  toolbar.rs
games/rts/src/ui/: mod.rs
games/rts/src/units/: footmen.rs  merchant.rs  mod.rs  worker.rs
games/tic-tac-toe/: Cargo.toml
games/tic-tac-toe/src/: debug.rs  main.rs  ui.rs
tools/: convert_textures.sh
tools/depth_gen/: Cargo.toml  reamd.md
tools/depth_gen/src/: main.rs
tools/image_gen/: Cargo.toml  reamde.md
tools/image_gen/src/: main.rs
tools/png_interlace/: Cargo.toml  README.md
tools/png_interlace/src/: main.rs
