[package]
name = "raven_bvh"
version = "0.2.0"
edition = "2024"
exclude = ["assets"]

[lib]
crate-type = ["lib"] 

[features]
default = []
camera = [] # Adds BvhCamera for debugging
debug_draw = [] # Enables Drawings Bvh and Tlas
trace = [] # Enables a few spans

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  { version = "0.16" }
raven_util = { path = "../raven_util" }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
#bevy-inspector-egui = { version = "0.11.0", features = [""] }


[dev-dependencies]
bevy = "0.16"

avian3d = "0.3"
bevy_enhanced_input = "0.11"
raven_editor = { path = "../raven_editor", features = []}

log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9"
rand_chacha = "0.9"
#sly_camera_controller = { git = "https://github.com/slyedoc/sly_camera_controller", branch = "main" }
#tracing = "0.1.34"
#criterion = { version = "0.6", features = ["html_reports"] }
image = "0.25"


[[bench]]
name = "random_scene"
required-features = ["camera"]
harness = true

[[bench]]
name = "common"
required-features = ["camera"]
harness = true


[[example]]
name = "bvh"
required-features = []

[[example]]
name = "tlas"
required-features = ["camera", "debug_draw"]

[[example]]
name = "sponza"
required-features = ["camera", "debug_draw"]

[[example]]
name = "clock_tower"
required-features = ["camera", "debug_draw"]

