[package]
name = "raven_terrain"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
bevy = { version = "0.16"}
avian3d = "0.3"
raven_util = { path = "../../crates/raven_util" }
raven_splat = { path = "../../crates/raven_splat" }

# rand
noisy_bevy = "0.10"
rand_core = "0.9"
rand = "0.9"
bevy_rand = { version = "0.11", features = ["rand_chacha", "wyrand"] }
bevy-inspector-egui = { version = "0.31" }
bytemuck = "1.23"
[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.11", features = ["wasm_js"] }

[dev-dependencies]
bevy = { version = "0.16", features = ["basis-universal"] }
raven_editor = { path = "../../crates/raven_editor", features = ["avian3d"] }
bevy_asset_loader = { version = "0.23", features = ["2d"] }


[[example]]
name = "basic"
required-features = []